<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Patient_signup_2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Back Button-->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/back_icon" />

        <!-- App Icon Part -->
        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@+string/app_icon"
            app:srcCompat="@drawable/main_log" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="#015C92"
            android:textSize="25sp" />

        <!-- Upload Verification Documents Part -->
        <TextView
            android:id="@+id/title_setup_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/title_setup_profile"
            android:textColor="@color/light_grey"
            android:textSize="20sp" />


        <!-- Gender Part -->
        <ImageView
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_below="@id/title_setup_profile"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/person" />

        <TextView
            android:id="@+id/title_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_setup_profile"
            android:layout_marginStart="65dp"
            android:layout_marginTop="40dp"
            android:text="@string/title_gender"
            android:textColor="@color/light_grey"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/input_gender"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_below="@id/title_gender"
            android:layout_marginStart="30dp"
            android:layout_marginTop="1dp"
            android:outlineProvider="bounds"
            android:spinnerMode="dropdown" />

        <!-- DOB Part -->
        <ImageView
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_below="@id/input_gender"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/calendar" />

        <TextView
            android:id="@+id/title_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_gender"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_dob"
            android:textColor="@color/light_grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/input_dob"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@id/title_dob"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_dob"
            android:textSize="15sp"
            android:textStyle="italic" />

        <!-- Underline -->
        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_below="@+id/title_dob"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:background="@color/dark_grey" />

        <!-- Address Part -->
        <ImageView
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_below="@id/input_dob"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/home" />

        <TextView
            android:id="@+id/title_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_dob"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_address"
            android:textColor="@color/light_grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_address"
            android:layout_marginStart="30dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:ems="20"
            android:hint="@string/hint_address" />


        <!-- Documents Consent -->
        <TextView
            android:id="@+id/txt_consent"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_address"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:text="@string/txt_consent"
            android:textAlignment="center"
            android:textColor="@color/light_grey"
            android:textSize="15sp" />


        <!-- Consent Check Box -->
        <CheckBox
            android:id="@+id/checkbox_consent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_address"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:checked="false"
            android:padding="5dp" />

        <!-- Complete Registration Button -->
        <Button
            android:id="@+id/btn_complete_register"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_below="@id/checkbox_consent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="28dp"
            android:backgroundTint="#1C7FCC"
            android:text="@string/btn_complete_registration"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <!-- Already Have Account? -->
        <TextView
            android:id="@+id/txt_ald_have_acc_1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_complete_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:text="@string/txt_ald_have_acc"
            android:textAllCaps="false"
            android:textColor="@color/light_grey"
            android:textSize="15sp" />

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="495dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>