<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_ForgotPassword">

    <!--Back Button-->
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/back_icon" />

    <!-- App Icon Part -->
    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@+string/app_icon"
        app:srcCompat="@drawable/main_log" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="#015C92"
        android:textSize="30sp" />


    <!-- Email Part -->
    <ImageView
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_below="@id/app_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/email" />

    <TextView
        android:id="@+id/title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginStart="65dp"
        android:layout_marginTop="50dp"
        android:text="@string/title_email"
        android:textColor="@color/light_grey"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_email"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:ems="20"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />


    <!-- Instruction to Reset Password -->
    <TextView
        android:id="@+id/txt_instruction_reset_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/txt_instruction_reset_pass"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="15sp"
        android:textStyle="italic" />


    <!-- Reset Password Button -->
    <Button
        android:id="@+id/btn_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="#2D82B5"
        android:shadowColor="#FFFFFF"
        android:text="@string/btn_reset_pass"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="458dp"
        android:visibility="gone" />

</RelativeLayout>